// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<UserAvatar /> with avatarLarge 1`] = `
.c0 {
  box-sizing: border-box;
  border-radius: 50%;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-transform: capitalize;
  text-align: center;
  background-position: 50% 50%;
  background-size: cover;
  border: 0;
  color: transparent;
  font-size: 12px;
  width: 24px;
  height: 24px;
}

@media (min-width:568px) {
  .c0 {
    font-size: 16px;
    width: 44px;
    height: 44px;
  }
}

<UserAvatar
  avatarLarge="http://via.placeholder.com/350x150"
>
  <styled.span
    avatarLarge="http://via.placeholder.com/350x150"
    style={
      Object {
        "backgroundImage": "url(http://via.placeholder.com/350x150)",
      }
    }
    variant="small"
  >
    <span
      className="c0"
      style={
        Object {
          "backgroundImage": "url(http://via.placeholder.com/350x150)",
        }
      }
    />
  </styled.span>
</UserAvatar>
`;

exports[`<UserAvatar /> with initial 1`] = `
.c0 {
  box-sizing: border-box;
  border-radius: 50%;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-transform: capitalize;
  text-align: center;
  border: 2px solid;
  font-size: 12px;
  width: 24px;
  height: 24px;
}

@media (min-width:568px) {
  .c0 {
    font-size: 16px;
    width: 44px;
    height: 44px;
  }
}

<UserAvatar
  initial="B"
>
  <styled.span
    initial="B"
    style={Object {}}
    variant="small"
  >
    <span
      className="c0"
      style={Object {}}
    >
      B
    </span>
  </styled.span>
</UserAvatar>
`;

exports[`<UserAvatar /> with initial props 1`] = `
.c0 {
  box-sizing: border-box;
  border-radius: 50%;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-transform: capitalize;
  text-align: center;
  font-size: 12px;
  width: 24px;
  height: 24px;
}

@media (min-width:568px) {
  .c0 {
    font-size: 16px;
    width: 44px;
    height: 44px;
  }
}

<UserAvatar>
  <styled.span
    style={Object {}}
    variant="small"
  >
    <span
      className="c0"
      style={Object {}}
    />
  </styled.span>
</UserAvatar>
`;
